build/i2c/tests/snapshots/codegen__ports.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_ports)"
---
pub mod ports {
    #[allow(dead_code)]
    pub const fn i2c2_b() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(0)
    }
    #[allow(dead_code)]
    pub const fn i2c2_f() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(1)
    }
    #[allow(dead_code)]
    pub const fn i2c3_a() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(0)
    }
}
